--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  firebase_core: ^2.26.0
+  firebase_auth: ^4.17.9
+  cloud_firestore: ^4.15.9
 
 dev_dependencies:
   flutter_test:
